--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap"
+      rel="stylesheet"
+    />
+    <title>introduce</title>
+
+    <!-- <script src="rain_demo.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <script defer src="canvas.js"></script>
+    <script defer src="menu.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
